# pamm-ui

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  pamm_ui.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  release-assets.yml
c_engine/: build_engine.ps1
py_engine/: __init__.py  __main__.py  animation.py  application.py  cli.py  config.py  devtools.py  engine_bridge.py  events.py  htmlpy_runtime.py  layout.py  media.py  parser.py  runner.py  style.py  uielements.py  window.py
